<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>org.jactr.core</artifactId>
	<packaging>jar</packaging>

	<parent>
		<groupId>org.jactr</groupId>
		<artifactId>org.jactr.distro</artifactId>
		<version>2.5.0-SNAPSHOT</version>
		<relativePath>../org.jactr.distro/pom.xml</relativePath>
	</parent>


	<name>jACT-R Core</name>
	<build>
		<sourceDirectory>java</sourceDirectory>
		<testSourceDirectory>tests</testSourceDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.commonreality</groupId>
			<artifactId>org.commonreality.api</artifactId>
			<version>1.5.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.commonreality</groupId>
			<artifactId>org.commonreality.core</artifactId>
			<version>1.5.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.commonreality</groupId>
			<artifactId>org.commonreality.modalities</artifactId>
			<version>1.5.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.commonreality</groupId>
			<artifactId>org.commonreality.sensors</artifactId>
			<version>1.5.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.commonreality</groupId>
			<artifactId>org.commonreality.sensors.xml</artifactId>
			<version>1.5.0-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.commonreality</groupId>
			<artifactId>org.commonreality.netty</artifactId>
			<version>1.5.0-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.26</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>28.0-jre</version>
		</dependency>
		<dependency>
      <groupId>org.graalvm.js</groupId>
      <artifactId>js</artifactId>
      <version>20.3.0</version>
    </dependency>  
    <dependency>
      <groupId>org.graalvm.js</groupId>
      <artifactId>js-scriptengine</artifactId>
      <version>20.3.0</version>
    </dependency>
	</dependencies>
</project>